// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectRow /> should render close collapse 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project1"
  in={false}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <Panel
    bsClass="panel"
    bsStyle="default"
    className="capco-panel-list"
    defaultExpanded={false}
    header={
      <div
        id="all-proposals"
      >
        <h3>
          <a
            className="profile__project__open__link"
            href="http://perdu.com"
            id="profile-project-link-project1"
            title="Perdu sur internet ?"
          >
            Perdu sur internet ?
          </a>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="profile__project__unfollow__button"
            disabled={false}
            id="profile-project-unfollow-button-project1"
            onClick={[Function]}
            style={
              Object {
                "float": "right",
              }
            }
          >
            <FormattedMessage
              id="unfollow-this-project"
              values={Object {}}
            />
          </Button>
        </h3>
      </div>
    }
  >
    <ListGroup
      bsClass="list-group"
    />
  </Panel>
</Collapse>
`;

exports[`<ProjectRow /> should render the project 1 with his proposal displayed 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project1"
  in={true}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <Panel
    bsClass="panel"
    bsStyle="default"
    className="capco-panel-list"
    defaultExpanded={false}
    header={
      <div
        id="all-proposals"
      >
        <h3>
          <a
            className="profile__project__open__link"
            href="http://perdu.com"
            id="profile-project-link-project1"
            title="Perdu sur internet ?"
          >
            Perdu sur internet ?
          </a>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="profile__project__unfollow__button"
            disabled={false}
            id="profile-project-unfollow-button-project1"
            onClick={[Function]}
            style={
              Object {
                "float": "right",
              }
            }
          >
            <FormattedMessage
              id="unfollow-this-project"
              values={Object {}}
            />
          </Button>
        </h3>
      </div>
    }
  >
    <ListGroup
      bsClass="list-group"
    >
      <ProposalRow
        key="0"
        proposal={
          Object {
            "id": "proposal1",
            "project": Object {
              "id": "project1",
            },
            "show_url": "http://carte.perdu.com",
            "title": "Une carte de l'internet",
          }
        }
      />
      <ProposalRow
        key="1"
        proposal={
          Object {
            "id": "proposal2",
            "project": Object {
              "id": "project1",
            },
            "show_url": "http://gps.perdu.com",
            "title": "Un GPS de l'internet",
          }
        }
      />
    </ListGroup>
  </Panel>
</Collapse>
`;

exports[`<ProjectRow /> should render the project 2 with his proposal displayed 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project2"
  in={true}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <Panel
    bsClass="panel"
    bsStyle="default"
    className="capco-panel-list"
    defaultExpanded={false}
    header={
      <div
        id="all-proposals"
      >
        <h3>
          <a
            className="profile__project__open__link"
            href="http://theuselessweb.com"
            id="profile-project-link-project2"
            title="Se perdre sur internet"
          >
            Se perdre sur internet
          </a>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="profile__project__unfollow__button"
            disabled={false}
            id="profile-project-unfollow-button-project2"
            onClick={[Function]}
            style={
              Object {
                "float": "right",
              }
            }
          >
            <FormattedMessage
              id="unfollow-this-project"
              values={Object {}}
            />
          </Button>
        </h3>
      </div>
    }
  >
    <ListGroup
      bsClass="list-group"
    >
      <ProposalRow
        key="0"
        proposal={
          Object {
            "id": "proposal3",
            "project": Object {
              "id": "project2",
            },
            "show_url": "https://randomstreetview.com/",
            "title": "Go  nowhere",
          }
        }
      />
    </ListGroup>
  </Panel>
</Collapse>
`;
